<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:gravity="left|center_vertical"
            android:padding="10dp"
            android:text="@string/show"
            android:textSize="@dimen/text_size_16" />
        <include layout="@layout/view_divide_line"/>
        <Button
            android:id="@+id/btn_hidden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:gravity="left|center_vertical"
            android:padding="10dp"
            android:text="@string/hidden"
            android:textSize="@dimen/text_size_16" />
        <include layout="@layout/view_divide_line"/>
        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:gravity="left|center_vertical"
            android:padding="10dp"
            android:text="@string/delete"
            android:textSize="@dimen/text_size_16" />
        <include layout="@layout/view_divide_line"/>
        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:gravity="left|center_vertical"
            android:padding="10dp"
            android:text="@string/save"
            android:textSize="@dimen/text_size_16" />

    </LinearLayout>

</LinearLayout>