<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:fitsSystemWindows="true">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:layout_marginLeft="@dimen/space_8"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:text="第一步："/>
            <Button
                android:id="@+id/btn_select_environ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="点击这里 选择环境因子"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="第二步：设置参数"/>

    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/space_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/text_size_16"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/unaccess_point"
            android:layout_weight="3.0" />
        <EditText
            android:textSize="@dimen/text_size_16"
            android:id="@+id/edit_unaccess_coor"
            android:background="@null"
            android:hint="@string/hint_unaccess_point"
            android:padding="@dimen/space_8"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_weight="7.0" />
    </LinearLayout>
    <include layout="@layout/view_divide_line" />
    <LinearLayout
        android:padding="@dimen/space_8"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/text_size_16"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/uncertain_threshold"
            android:layout_weight="3.0" />
        <EditText
            android:textSize="@dimen/text_size_16"
            android:id="@+id/edit_simi_threshold"
            android:background="@null"
            android:hint="@string/hint_uncertain_threshold"
            android:padding="@dimen/space_8"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_weight="7.0"/>
    </LinearLayout>
    <include layout="@layout/view_divide_line" />
    <LinearLayout
        android:padding="@dimen/space_8"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/text_size_16"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/candidate_threshold"
            android:layout_weight="3.0" />
        <EditText
            android:textSize="@dimen/text_size_16"
            android:id="@+id/edit_candidate_threshold"
            android:background="@null"
            android:hint="@string/hint_candidate_threshold"
            android:padding="@dimen/space_8"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_weight="7.0"/>
    </LinearLayout>
    <include layout="@layout/view_divide_line" />
    <LinearLayout
        android:padding="@dimen/space_8"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/text_size_16"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:text="@string/candidate_radius"
            android:layout_weight="3.0" />
        <EditText
            android:textSize="@dimen/text_size_16"
            android:id="@+id/edit_candidate_radius"
            android:background="@null"
            android:hint="@string/hint_candidate_radius"
            android:padding="@dimen/space_8"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_weight="7.0"/>
    </LinearLayout>
    <include layout="@layout/view_divide_line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:layout_marginLeft="@dimen/space_8"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="第三步：点击右上角的按钮，快去计算可替代样点吧"/>

    </LinearLayout>

</LinearLayout>
