<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>
    
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical" >

       <LinearLayout 
           android:id="@+id/rl_environment"
           style="@style/option_item_rl"
           android:layout_marginTop="@dimen/space_20">
           <ImageView 
               style="@style/option_item_img" 
               android:contentDescription="@null"
               android:background="@drawable/icon_environment"/>
           <TextView
                style="@style/option_item_text"
                android:text="@string/environ_variable" />
       </LinearLayout>
       <View
           android:layout_width="match_parent"
           android:layout_height="1px"
           android:background="@color/list_divider_color"
           android:visibility="gone" />
       <LinearLayout
           android:id="@+id/rl_fuzzy_membership_map"
           style="@style/option_item_rl"
           android:layout_marginTop="@dimen/space_20">
           <ImageView
               style="@style/option_item_img"
               android:contentDescription="@null"
               android:background="@drawable/icon_membership"/>
           <TextView
               style="@style/option_item_text"
               android:text="@string/fuzzy_membership_map" />
       </LinearLayout>

       <LinearLayout 
           android:id="@+id/rl_fcm"
           style="@style/option_item_rl">
           <ImageView 
               style="@style/option_item_img" 
               android:contentDescription="@null"
               android:background="@drawable/icon_fcm_class"/>
           <TextView
                style="@style/option_item_text"
                android:text="@string/fcm_cluster" />
       </LinearLayout>
   </LinearLayout>
    
</LinearLayout>
