<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>
    <!-- name, latitude, longitude, html comment, picture-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- name of the sample-->
        <LinearLayout
            android:padding="@dimen/space_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:textSize="@dimen/text_size_16"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/sample_name"
                android:layout_weight="3.0" />
            <EditText
                android:textSize="@dimen/text_size_16"
                android:id="@+id/edit_sample_name"
                android:padding="@dimen/space_8"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_weight="7.0" />
        </LinearLayout>
        <!-- latitude of the sample-->
        <LinearLayout
            android:padding="@dimen/space_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:textSize="@dimen/text_size_16"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/sample_lat"
                android:layout_weight="3.0" />
            <EditText
                android:textSize="@dimen/text_size_16"
                android:id="@+id/edit_sample_lat"

                android:padding="@dimen/space_8"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_weight="7.0" />
        </LinearLayout>
        <!-- longitude of the sample-->
        <LinearLayout
            android:padding="@dimen/space_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:textSize="@dimen/text_size_16"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/sample_lng"
                android:layout_weight="3.0" />
            <EditText
                android:textSize="@dimen/text_size_16"
                android:id="@+id/edit_sample_lng"

                android:padding="@dimen/space_8"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.0dip"
                android:layout_weight="7.0" />
        </LinearLayout>

        <!-- change marker icon-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/space_10"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tv_sample_pic"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="3.0"
                android:textSize="@dimen/text_size_16"
                android:text="@string/sample_picture"/>
            <ImageButton
                android:id="@+id/imgBtn_sample_pic"
                android:background="@color/lightgray"
                android:layout_width="0dip"
                android:layout_height="48dp"
                android:layout_weight="7.0"/>

        </LinearLayout>
    </LinearLayout>

    <!-- calculate alter sample and export kml-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/space_20"
            android:background="@color/list_divider_color"/>
        <LinearLayout
            android:id="@+id/rl_calc_alterSample"
            style="@style/option_item_rl">
            <ImageView
                style="@style/option_item_img"
                android:background="@drawable/icon_altersample"/>
            <TextView
                style="@style/option_item_text"
                android:text="@string/calc_alterSample"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/rl_export_altersamples"
            style="@style/option_item_rl">
            <ImageView
                style="@style/option_item_img"
                android:background="@drawable/icon_export"/>
            <TextView
                style="@style/option_item_text"
                android:text="@string/export_altersamples"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/rl_sample_htmlComment"
            style="@style/option_item_rl">
            <ImageView
                style="@style/option_item_img"
                android:background="@drawable/html_comment"/>
            <TextView
                style="@style/option_item_text"
                android:text="@string/sample_comment"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>